EVALSYS-1235 fix for matric item UI CSS alignments patch applied from Jacob L (Unicon)
git-svn-id: https://source.sakaiproject.org/contrib/evaluation/branches/unicon-ucb@79072 fdecad78-55fc-0310-b1b2-d7d25cf747c9

--- a/tool/src/webapp/content/css/evaluation_base.css
+++ b/tool/src/webapp/content/css/evaluation_base.css
@@ -1741,10 +1741,11 @@ table#user-perms-table td.userPerms > span:nth-child(2n) {
 .evaluation .item-group .response-group-labels {
   display: block;
   margin-top: 0.5em;
+  text-align: right !important;
 }
 .evaluation .item-group .response-scale-label {
   display: inline-block;
-  padding: 0 16px;
+  padding: 0 17px;
   width: 12px;
   font-size: 12px;
   text-align: center;
